Cart quantity renders correctly for amazon.html and checkout.html

--- a/checkout.html
+++ b/checkout.html
@@ -30,7 +30,8 @@
 
         <div class="checkout-header-middle-section">
           Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+            href="amazon.html"
+            id="js-return-to-home-link"></a>)
         </div>
 
         <div class="checkout-header-right-section">
