--- a/orders.html
+++ b/orders.html
@@ -45,7 +45,8 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity"
+          id="js-cart-quantity"></div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
